# incline3d-gui

./: .gitignore  ARCHITECTURE.md  CMakeLists.txt  README.md  STATIC_BUILD.md
resources/: resources.qrc
src/app/: main.cpp
src/core/: file_io.cpp  file_io.h  incline_process_runner.cpp  incline_process_runner.h  project_manager.cpp  project_manager.h  settings.cpp  settings.h
src/models/: measurements_model.cpp  measurements_model.h  project_point.cpp  project_point.h  project_points_model.cpp  project_points_model.h  results_model.cpp  results_model.h  shot_point.cpp  shot_point.h  shot_points_model.cpp  shot_points_model.h  well_data.cpp  well_data.h  well_table_model.cpp  well_table_model.h
src/ui/: about_dialog.cpp  about_dialog.h  conclusion_dialog.cpp  conclusion_dialog.h  export_image_dialog.cpp  export_image_dialog.h  import_las_dialog.cpp  import_las_dialog.h  import_zak_dialog.cpp  import_zak_dialog.h  main_window.cpp  main_window.h  manual_input_dialog.cpp  manual_input_dialog.h  measurements_dock.cpp  measurements_dock.h  offset_dialog.cpp  offset_dialog.h  process_dialog.cpp  process_dialog.h  project_points_dock.cpp  project_points_dock.h  proximity_dialog.cpp  proximity_dialog.h  report_header_dialog.cpp  report_header_dialog.h  results_dock.cpp  results_dock.h  settings_dialog.cpp  settings_dialog.h  shot_points_dock.cpp  shot_points_dock.h  vertical_settings_dialog.cpp  vertical_settings_dialog.h  view_options_dialog.cpp  view_options_dialog.h  wells_dock.cpp  wells_dock.h
src/utils/: angle_utils.cpp  angle_utils.h  logger.cpp  logger.h
src/views/: plan_view.cpp  plan_view.h  vertical_view.cpp  vertical_view.h  view3d_widget.cpp  view3d_widget.h  view_settings.cpp  view_settings.h
tests/: CMakeLists.txt  test_angle_utils.cpp  test_process_runner.cpp  test_project_manager.cpp  test_well_data.cpp  test_well_table_model.cpp
